reactive_resume/rr-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: reactive-resume
  name: reactive-resume
  namespace: resume
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reactive-resume
  template:
    metadata:
      labels:
        app: reactive-resume
    spec:
      containers:
      - image: ghcr.io/amruthpillai/reactive-resume:v5.2.6
        name: reactive-resume
        ports:
          - containerPort: 3000
        volumeMounts:
          - mountPath: /app/data
            name: resumedata
      volumes:
        - name: resumedata
          persistentVolumeClaim:
            claimName: resume-storage
