reactive_resume/rr-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: reactive-resume
    env: internal
  name: resume-svc
  namespace: resume
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 3000
  selector:
    app: reactive-resume
