reactive_resume/rr-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: resume-httproute
  namespace: resume
  labels:
    env: internal
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: ListenerSet
    name: resume-listeners
    namespace: resume
    sectionName: resume-https
  hostnames:
  - resume.huntrrose.com
  rules:
  - backendRefs:
    - name: resume-svc
      namespace: resume
      port: 80
